# TransNoteBook2

./: .gitignore  API.md  ARCHITECTURE.md  README.md  RECITATION_DATA_LAYER.md  REFACTOR_PLAN.md  REFACTOR_PLAN_DOCS.md  REFACTOR_PLAN_SERVICES.md  TODO.md  build-ico.js  electron-builder.yml  index.html  package-lock.json  package.json  temp_full.txt  temp_part1.txt  temp_part2.txt  temp_part3.txt  tsconfig.json  tsconfig.node.json  vitest.config.ts
doc/: API.md  ARCHITECTURE.md  TODO.md
doc/v1.1/: RECITATION_DATA_LAYER.md  编写TSBook2项目软件开发文档.md
doc/v1.2/: REFACTOR_PLAN_v1.2.md
doc/v1.3/: API.md  ARCHITECTURE.md
doc/v1.3/api/: electron-ipc.md  recitation.md  stores-hooks-services.md  types.md
doc/v1.3/architecture/: modules.md  overview.md  reference.md
doc/v1.4/: TODO_v1.4.md
doc/v1.4/api/: electron-ipc.md  recitation.md  stores-hooks-services.md  translation.md  types.md  utilities-examples.md
doc/v1.4/architecture/: modules.md  overview.md  reference.md
doc/v1.5/: TODO_v1.5.md
electron/: main.ts  preload.ts  state.ts  types.ts
electron/handlers/: dialogHandlers.ts  fileHandlers.ts  recitationHandlers.ts  settingsHandlers.ts  ttsHandlers.ts  workspaceConfigHandlers.ts
electron/recitation/: bookDAL.ts  bookImporter.ts  bookService.ts  database.ts  ebbinghaus.ts  recitationDAL.ts  statDAL.ts  studyService.ts  userStudyDAL.ts  wordDAL.ts
electron/tts/: CMakeLists.txt  TtsEngine.cpp  TtsEngine.h  tts_server.cpp
electron/workspace/: configProvider.ts
scripts/: dev-electron.js
src/: App.tsx  main.tsx
src/components/: icons.tsx
src/components/cells/: CellCollapseIndicator.tsx  CellContainer.tsx  CellEditor.tsx  CellOutput.tsx  CellToolbar.tsx
src/components/file/: FileExplorer.tsx
src/components/import/: ImportDialog.tsx
src/components/layout/: ActivityBar.tsx  AppShell.tsx  Panel.tsx  Sidebar.tsx  StatusBar.tsx
src/components/notebook/: NotebookEditor.tsx  NotebookToolbar.tsx  (+1 more)
src/constants/: ttsSpeakers.ts
src/hooks/: useBookmark.ts  useCellService.ts  useFileService.ts  useKeyboard.ts  useRecitationService.ts  useTheme.ts  useTranslationService.ts
src/locales/: en-US.json  i18n.ts  zh-CN.json
src/recitation/: ebbinghaus.ts  index.ts  quizTypes.ts  types.ts  wordSidebarTypes.ts
src/services/: cellService.ts  fileService.ts  index.ts  logService.ts  recitationService.ts  translationService.ts  types.ts
src/store/: notebookStore.ts  outputStore.ts  recitationStore.ts  settingStore.ts  themeStore.ts  workspaceConfigStore.ts  workspaceStore.ts
src/styles/: global.css  themes.ts
src/translation/: providerFactory.ts  types.ts
src/types/: electron.ts  notebook.ts
src/utils/: articleUtils.ts  fileUtils.ts
tests/components/: fileUtils.test.ts
tests/store/: notebookStore.test.ts  themeStore.test.ts
(+19 files in other folders)
